tests/ui/pattern/usefulness/issue-12369.stderr
error: unreachable pattern
  --> $DIR/issue-12369.rs:9:9
   |
LL |         &[10,a, ref rest @ ..] => 10
   |         ^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
   |
note: multiple earlier patterns match some of the same values
  --> $DIR/issue-12369.rs:9:9
   |
LL |         &[a,b,c] => 3,
   |         -------- matches some of the same values
LL |         &[a, ref rest @ ..] => a,
   |         ------------------- matches some of the same values
LL |         &[10,a, ref rest @ ..] => 10
   |         ^^^^^^^^^^^^^^^^^^^^^^ collectively making this unreachable
note: the lint level is defined here
  --> $DIR/issue-12369.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

